# serializer version: 1
# name: test_build_error_view_snapshot
  dict({
    'blocks': list([
      dict({
        'text': dict({
          'text': ':x: *Couldn’t load agent setup.* Please try again. (ref: 01ARZ3NDEKTSV4RRFFQ69G5FAV)',
          'type': 'mrkdwn',
        }),
        'type': 'section',
      }),
    ]),
    'callback_id': 'agent_setup',
    'title': dict({
      'text': 'Agent Setup',
      'type': 'plain_text',
    }),
    'type': 'modal',
  })
# ---
# name: test_to_blocks_snapshot[minimal_thinking]
  list([
    dict({
      'text': dict({
        'text': '*Working on it…*',
        'type': 'mrkdwn',
      }),
      'type': 'section',
    }),
    dict({
      'type': 'divider',
    }),
    dict({
      'elements': list([
        dict({
          'action_id': 'cancel_turn',
          'style': 'danger',
          'text': dict({
            'text': 'Stop',
            'type': 'plain_text',
          }),
          'type': 'button',
        }),
      ]),
      'type': 'actions',
    }),
  ])
# ---
# name: test_to_blocks_snapshot[saturated_trail_with_preview_and_cost]
  list([
    dict({
      'text': dict({
        'text': '*Working on it…*',
        'type': 'mrkdwn',
      }),
      'type': 'section',
    }),
    dict({
      'elements': list([
        dict({
          'text': '''
            *Details*
            `+3 earlier`
            `✔️ Read a file`
            `🚫 Wrote a file`
            `✔️ Search issues (tracker)`
            `✔️ Listed files`
            `🔍 Searching files`
            `🖋️ Running a command`
          ''',
          'type': 'mrkdwn',
        }),
      ]),
      'type': 'context',
    }),
    dict({
      'expand': True,
      'text': dict({
        'text': '> Preview text describing the ongoing work.',
        'type': 'mrkdwn',
      }),
      'type': 'section',
    }),
    dict({
      'type': 'divider',
    }),
    dict({
      'elements': list([
        dict({
          'action_id': 'cancel_turn',
          'style': 'danger',
          'text': dict({
            'text': 'Stop',
            'type': 'plain_text',
          }),
          'type': 'button',
        }),
      ]),
      'type': 'actions',
    }),
    dict({
      'elements': list([
        dict({
          'text': '20s',
          'type': 'mrkdwn',
        }),
      ]),
      'type': 'context',
    }),
  ])
# ---
# name: test_to_blocks_snapshot[single_tool]
  list([
    dict({
      'text': dict({
        'text': '*Working on it…*',
        'type': 'mrkdwn',
      }),
      'type': 'section',
    }),
    dict({
      'elements': list([
        dict({
          'text': '''
            *Details*
            `🖋️ Running a command`
          ''',
          'type': 'mrkdwn',
        }),
      ]),
      'type': 'context',
    }),
    dict({
      'type': 'divider',
    }),
    dict({
      'elements': list([
        dict({
          'action_id': 'cancel_turn',
          'style': 'danger',
          'text': dict({
            'text': 'Stop',
            'type': 'plain_text',
          }),
          'type': 'button',
        }),
      ]),
      'type': 'actions',
    }),
    dict({
      'elements': list([
        dict({
          'text': '10s',
          'type': 'mrkdwn',
        }),
      ]),
      'type': 'context',
    }),
  ])
# ---
# name: test_to_blocks_snapshot[terminal_done_no_cost]
  list([
    dict({
      'text': dict({
        'text': 'Done.',
        'type': 'mrkdwn',
      }),
      'type': 'section',
    }),
    dict({
      'type': 'divider',
    }),
    dict({
      'elements': list([
        dict({
          'text': 'Atlas',
          'type': 'mrkdwn',
        }),
      ]),
      'type': 'context',
    }),
    dict({
      'elements': list([
        dict({
          'text': '''
            *Details*
            Time: 42s
            Tokens: 1.5k in / 320 out
          ''',
          'type': 'mrkdwn',
        }),
      ]),
      'type': 'context',
    }),
  ])
# ---
# name: test_to_blocks_snapshot[terminal_done_with_cost]
  list([
    dict({
      'text': dict({
        'text': 'Done.',
        'type': 'mrkdwn',
      }),
      'type': 'section',
    }),
    dict({
      'type': 'divider',
    }),
    dict({
      'elements': list([
        dict({
          'text': 'Atlas',
          'type': 'mrkdwn',
        }),
      ]),
      'type': 'context',
    }),
    dict({
      'elements': list([
        dict({
          'text': '''
            *Details*
            Time: 42s
            Cost: $0.04
            Tokens: 1.5k in / 320 out
          ''',
          'type': 'mrkdwn',
        }),
      ]),
      'type': 'context',
    }),
  ])
# ---
# name: test_to_blocks_snapshot[terminal_error_with_reason]
  list([
    dict({
      'text': dict({
        'text': 'Something went wrong.',
        'type': 'mrkdwn',
      }),
      'type': 'section',
    }),
    dict({
      'text': dict({
        'text': 'Mention me to try again.',
        'type': 'mrkdwn',
      }),
      'type': 'section',
    }),
    dict({
      'type': 'divider',
    }),
    dict({
      'elements': list([
        dict({
          'text': 'Atlas',
          'type': 'mrkdwn',
        }),
      ]),
      'type': 'context',
    }),
    dict({
      'elements': list([
        dict({
          'text': '''
            *Details*
            Time: 12s
            Tokens: 100 in / 50 out
          ''',
          'type': 'mrkdwn',
        }),
      ]),
      'type': 'context',
    }),
  ])
# ---
# name: test_to_blocks_snapshot[thinking_with_elapsed]
  list([
    dict({
      'text': dict({
        'text': '*Working on it…*',
        'type': 'mrkdwn',
      }),
      'type': 'section',
    }),
    dict({
      'type': 'divider',
    }),
    dict({
      'elements': list([
        dict({
          'action_id': 'cancel_turn',
          'style': 'danger',
          'text': dict({
            'text': 'Stop',
            'type': 'plain_text',
          }),
          'type': 'button',
        }),
      ]),
      'type': 'actions',
    }),
    dict({
      'elements': list([
        dict({
          'text': '10s',
          'type': 'mrkdwn',
        }),
      ]),
      'type': 'context',
    }),
  ])
# ---
# name: test_to_blocks_snapshot[thinking_with_preview]
  list([
    dict({
      'text': dict({
        'text': '*Working on it…*',
        'type': 'mrkdwn',
      }),
      'type': 'section',
    }),
    dict({
      'expand': True,
      'text': dict({
        'text': '> Let me check that for you.',
        'type': 'mrkdwn',
      }),
      'type': 'section',
    }),
    dict({
      'type': 'divider',
    }),
    dict({
      'elements': list([
        dict({
          'action_id': 'cancel_turn',
          'style': 'danger',
          'text': dict({
            'text': 'Stop',
            'type': 'plain_text',
          }),
          'type': 'button',
        }),
      ]),
      'type': 'actions',
    }),
    dict({
      'elements': list([
        dict({
          'text': '10s',
          'type': 'mrkdwn',
        }),
      ]),
      'type': 'context',
    }),
  ])
# ---
